# nlsql-mas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .tflint.hcl  .trivyignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pr-infra.yml
docs/: SETUP.md  index.md  schema_documentation.md
docs/architecture/: HLD.md  LLD.md
env-files/: dev.env  docker-compose.yml
env-files/docker/: Dockerfile.api  Dockerfile.ui
env-files/secrets/: secrets.env.example
infrastructure/: README.md
infrastructure/environments/dev/: backend.tf  main.tf  terraform.tfvars
infrastructure/environments/prod/: backend.tf  main.tf  terraform.tfvars
infrastructure/modules/aurora/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/modules/compliance/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/modules/github-oidc/: main.tf  outputs.tf  variables.tf
infrastructure/modules/monitoring/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf  versions.tf
src/retail_insights/: __init__.py
src/retail_insights/agents/: __init__.py  graph.py  state.py
src/retail_insights/agents/nodes/: __init__.py  executor.py  router.py  schema_discovery.py  sql_generator.py  summarizer.py  validator.py
src/retail_insights/agents/prompts/: __init__.py  router.py  schema_discovery.py  sql_generator.py  summarizer.py
src/retail_insights/agents/tools/: __init__.py  schema_tools.py
src/retail_insights/api/: __init__.py  app.py  auth.py  dependencies.py  middleware.py  rate_limit.py
src/retail_insights/api/routes/: __init__.py  admin.py  query.py
src/retail_insights/core/: __init__.py  config.py  exceptions.py  llm.py  logging.py  metrics.py  telemetry.py
src/retail_insights/engine/: __init__.py  cache.py  connector.py  description_generator.py  query_runner.py  schema_registry.py
src/retail_insights/models/: __init__.py  agents.py  requests.py  responses.py  schema.py
src/retail_insights/ui/: app.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_error_scenarios.py  test_queries.py  test_summarization.py
tests/fixtures/data/: sample_data.py
tests/integration/: conftest.py  test_admin_routes.py  test_engine.py  test_executor.py  test_query_routes.py
tests/unit/: test_auth.py  test_cache.py  test_config.py  test_graph.py  test_logging.py  test_middleware.py  test_models.py  test_rate_limit.py  test_router.py  test_sanitization.py  test_schema.py  test_sql_generator.py  test_summarizer.py  test_ui.py  test_validator.py
